--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \usepackage{algpseudocode}
 \usepackage{algorithm}
 \usepackage{physics}
+\usepackage{tcolorbox}
 
 \usepackage{multicol}
 \usepackage{subfiles}
@@ -235,6 +236,14 @@
 \hdiv{10pt}{2pt}{10pt}
 \begin{multicols}{2}
   \subfile{physics/adv_electricity_magetism.tex}
+\end{multicols}
+
+\newpage
+\part{Theoretical Dynamics}
+\label{prt:theoretical_dynamics}
+\hdiv{10pt}{2pt}{10pt}
+\begin{multicols}{2}
+  \subfile{physics/theoretical_dynamics.tex}
 \end{multicols}
 
 \newpage
